changes to address code review comments